# workflow_for_website

./: .gitignore  README.md  pyproject.toml
apps/: business_process_improvement.html  data_migration.html  incident_management.html  system_configuration.html
config/: workflow.yaml
designer/: index.html
scripts/: export_workflow_png.py
src/intent_workflow/: __init__.py  api.py  cli.py  config.py  export_png.py  graph.py
